--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'SUITE Variable', sans-serif;
+  letter-spacing: 0.2px;
 }
 
 .background {
@@ -20,26 +22,45 @@
 .wrapper {
   display: flex;
   flex-direction: row;
-  background-color: aqua;
   padding: 32px 0 0 32px;
 }
 
 .wrapper__left {
   width: 208px;
   height: 472px;
-  background-color: yellow;
+  display: flex;
+  flex-direction: column;
 }
 .wrapper__left__header {
   width: 100%;
   height: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  align-items: center;
+  
 }
 .wrapper__left__body {
   width: 100%;
   height: 100%;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
 .wrapper__right {
   width: 524px;
   height: 472px;
-  background-color: green;
 }
+.today{
+  font-size: 9px;
+}
+.left__body_profile{}
+.left__body_footer{}
+
+
+.left__body__header{}
+.left__body__header_gray{}
+.left__body__header_line{}
