--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -48,11 +48,13 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .wrapper__right {
   width: 524px;
   height: 472px;
+  
 }
 .today{
   font-size: 9px;
