--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -59,10 +59,10 @@
 .today{
   font-size: 9px;
 }
-.left__body_profile{}
+/* .left__body_profile{}
 .left__body_footer{}
 
 
 .left__body__header{}
 .left__body__header_gray{}
-.left__body__header_line{}
+.left__body__header_line{} */
