--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -31,15 +31,17 @@
   display: flex;
   flex-direction: column;
 }
+
 .wrapper__left__header {
   width: 100%;
   height: 30px;
   display: flex;
   flex-direction: row;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
-  
+
 }
+
 .wrapper__left__body {
   width: 100%;
   height: 100%;
@@ -49,20 +51,39 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px 30px
 }
 
 .wrapper__right {
   width: 524px;
   height: 472px;
-  
+
 }
-.today{
+
+.today {
   font-size: 9px;
 }
-/* .left__body_profile{}
-.left__body_footer{}
+
+.left__body_profile {}
+
+.left__body_footer {}
 
 
-.left__body__header{}
-.left__body__header_gray{}
-.left__body__header_line{} */
+.left__body__header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  
+}
+
+.left__body__header_gray {
+  width: 148px;
+  height: 133px;
+  background-color: #ddd;
+}
+
+.left__body__header_line {
+  border-top: 1px dotted #000;
+  margin: 12px 0px;
+}
