--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -4,6 +4,8 @@
   padding: 0;
   font-family: 'SUITE Variable', sans-serif;
   letter-spacing: 0.2px;
+  text-decoration: none;
+  
 }
 
 .background {
@@ -74,7 +76,7 @@
   display: flex;
   flex-direction: column;
 
-  
+
 }
 
 .left__body__header_gray {
@@ -87,3 +89,23 @@
   border-top: 1px dotted #000;
   margin: 12px 0px;
 }
+
+.wrapper__right {
+  display: flex;
+  justify-content: space-between;
+  width: 524px;
+  margin-top: 8px;
+}
+
+.right__body_more a {
+  font-size: 12px;
+  color: #000;
+}
+
+.right__body__header {
+  position: relative;
+  left: 6%;
+}
+.left__body_profile{font-size: 10px;}
+.left__body_footer{font-size: 10px;}
+.left__body_footer select{font-size: 10px;}
